Fix line-height of window title to match 'button' height so that they align

--- a/termynal.css
+++ b/termynal.css
@@ -49,6 +49,7 @@
     left: 0;
     width: 100%;
     text-align: center;
+    line-height: 15px;
 }
 
 [data-ty] {
